feat: implement mode config and state machine
